sorta fixed alignment of conatct.js

--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -5,7 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-#component-wrapper {
+/* #component-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 10px;
@@ -14,14 +14,16 @@
 
 .skills-component {
     grid-area: skills;
-}
+} */
 
 #form-wrapper {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 70%;
+    /* margin-top: 30rem;
+    margin-left: 50rem; */
     transform: translate(-50%, -50%);
-    width: 280px;
+    width: /* 280px */ 380px;
     height: 520px;
     border-radius: 10px;
     display: flex;
